# tchuru

./: .gitignore  AGENTS.md  Dockerfile.poc  LICENSE  justfile  main.py  package-lock.json  package.json  pyproject.toml  shell.nix  smoke.mjs  tsconfig.json
backend/: README.md  interactions.jsonl  interactions_big.jsonl  interactions_v2.jsonl  interactions_v3.jsonl  opencode.py  opencode_sdk.py  poc.py  poc_v2.py  pocplan.md
backend/memorydb/: PLAN.md  package.json  query-graph.ts
backend/memorydb/src/: cli.ts  config.ts  embed.ts  extract.ts  extraction-mcp.ts  graph.ts  ingest.ts  ontology.ts  schema.ts  sources.ts
backend/opencode/: .gitlab-ci.yml  .travis.yml  README.md  openapi-generator-config.json  openapi.json  pyproject.toml  requirements.txt  setup.py  sse.py  test_create_only.py  test_event_stream.py  test_event_stream_runner.py  test_events.py  test_list_sessions.py  test_sse_both.py  test_sse_raw.py  test_sse_raw_bytes.py  test_ticker_only.py  tox.ini
backend/opencode/.openapi-generator/: FILES
backend/opencode/docs/: APIError.md  APIErrorData.md  Agent.md  AgentColor.md  AgentConfig.md  AgentConfigColor.md  AgentPart.md  AgentPartInput.md  AgentPartSource.md  AgentV2Info.md  ApiAuth.md  AppLogRequest.md  AppSkills200ResponseInner.md  AssistantMessage.md  AssistantMessageError.md  AssistantMessagePath.md  Auth.md  (+906 more)
backend/poc_v3/: Dockerfile.export  EMBED_COMPARISON.md  PLAN.md  README.md  tsconfig.json
backend/poc_v4/: tsconfig.json
desktop/: main.py
desktop/Base/: Overlay.qml  Root.qml  Theme.qml  qmldir
scripts/: xpra-html5-osk-patch.sh
(+1891 files in other folders)
