[project]
name = "tchuru"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyside6>=6.11.1",
]

[dependency-groups]
export = [
    "huggingface-hub[hf-xet]>=0.36",
    "numpy>=2.4.4",
    "onnx>=1.17",
    "sentence-transformers>=5.1,<6",
    "torch>=2.6",
    "transformers>=4.56,<5",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
